39) kernel: ralink wifi: xxxx: add NoForwardingMBCast option for isolate client2client BCAST traffic.<br>
40) kernel: ralink wifi: xxxx: review and cleanup dyncvga and microvawe oven detect support.<br>
41) kernel: ralink_gpio: fix use gpio pins shared with extphy/pa.<br>
42) kernel: ralink_arch: NR_IRQS is no longer dependent from BITS_PER_LONG.<br>
43) kernel: mips: irq: use DECLARE_BITMAP.<br>
44) kernel: mips: bmips: fix bmips_wr_vec().<br>
45) kernel: mips: adjust mips highmem offset to avoid the need for -mlong-calls on systems with >256M RAM.<br>
46) kernel: mips: c-r4k: fix typo in probe_scache().<br>
47) kernel: mips: fix enabling of DEBUG_STACKOVERFLOW.<br>
48) kernel: jhash: update jhash_[321]words functions to use correct initval.<br>
49) kernel: sfhash: add generic inline helper for more gcc optimize effect.<br>
50) kernel: mm: use clear_page_mlock() in page_remove_rmap().<br>
51) kernel: mm: remove free_page_mlock.<br>
52) kernel: mm: remove unevictable_pgs_mlockfreed.<br>
53) kernel: net: udp: fix behavior of wrong checksums.<br>
54) kernel: net: bridge: fix multicast router rlist endless loop.<br>
<br>
<br>
<b>3.2.x</b><br>
1) toolchain: update gcc to 20150614 4.8.5-RC version form git, update headers.<br>
2) dnsmasq: up to 2.73 version.<br>
3) kernel: ralink wifi: 7610: fix clean NDP announces.<br>
4) kernel: ralink wifi: 7610: do not agregate low rate pkts.<br>
5) kernel: ralink wifi: 7610: fix txburst in AC mode.<br>
<br>
<br>
<b>TODO:</b><br>
2) full russian ui (work end ~90%).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
7) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>