@@ -1022,6 +1022,7 @@
 3) kernel: ralink wifi: 7610: fix clean NDP announces.<br>
 4) kernel: ralink wifi: 7610: do not agregate low rate pkts.<br>
 5) kernel: ralink wifi: 7610: fix txburst in AC mode.<br>
+6) kernel: netfilter: don't use module_init/exit in core IPV4 code.<br>
 <br>
 <br>
 <b>TODO:</b><br>
